# aigc-article-writer

./: .env.example  .gitignore  CHANGELOG.md  GITHUB_SETUP.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  PROJECT_TEST_REPORT.md  README.md  RELEASE_NOTES.md  check_dependencies.py  main.py  push_to_github.bat  push_to_github.sh  pyproject.toml  requirements.txt  run.py
.serena/memories/: architecture_design.md  code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/: __init__.py  __version__.py  article_quality.py  article_templates.py  article_writer.py  config.py  database.py  news_analyzer.py  news_sources.py  web_interface.py
templates/: index.html
tests/: __init__.py  test_basic.py  test_comprehensive.py  test_news.py  test_performance.py
